<resources>
    <string name="app_name">牙医联盟</string>
    <string name="commit">提交</string>
    <string name="cancle">取消</string>
    <string name="Year">年</string>
    <string name="Month">月</string>
    <string name="Day">日</string>
    <string name="edit">编辑</string>
    <string name="photo">拍照</string>
    <string name="camera">从相册选择</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <declare-styleable name="PickerView">

        <attr name="isLoop" format="boolean" />

    </declare-styleable>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_pass">请输入密码</string>
    <string name="login">登录</string>
    <string name="Registerimmediately">立即注册</string>
    <string name="forgetpass">忘记密码</string>
    <string name="input_code">请输入短信验证码</string>
    <string name="gologin">已有账号，去登录</string>
    <string name="sure_register">确认注册</string>
    <string name="input_re_pass">请再次输入密码</string>
    <string name="clinic_introduce">医生介绍</string>
    <string name="main_pro">擅长</string>
    <string name="line_appo">在线预约</string>
    <string name="sure">确认</string>
    <string name="feedback">意见反馈</string>
    <string name="update_pass">修改密码</string>
    <string name="exicelogin">退出登录</string>
    <string name="name">姓名</string>
    <string name="year">年龄</string>
    <string name="head">头像</string>
    <string name="tell">电话咨询</string>


    <declare-styleable name="RatioLayout">
        <attr name="ratio" format="float"></attr>
        <attr name="ratioMode" format="enum">
            <enum name="width" value="0"></enum>
            <enum name="height" value="1"></enum>
        </attr>
    </declare-styleable>
</resources>
