<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.xy.dentist.ui.login.LoginActivity">

    <com.jaydenxiao.common.commonwidget.NormalTitleBar
        android:id="@+id/ntb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"/>

    <EditText
        android:id="@+id/et_phone"
        style="@style/input_nomal_style"
        android:hint="@string/input_phone"
        android:inputType="phone"
        android:maxLength="11"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_code"
            style="@style/input_nomal_style"
            android:layout_width="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:hint="@string/input_code"
            />

        <TextView
            android:id="@+id/tv_getcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@mipmap/get_code"
            android:textColor="@color/white"
            android:gravity="center"/>


    </LinearLayout>

    <EditText
        android:id="@+id/et_passw"
        style="@style/input_nomal_style"
        android:hint="@string/input_pass"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/et_re_passw"
        style="@style/input_nomal_style"
        android:hint="@string/input_re_pass"
        android:inputType="textPassword"
        />


    <TextView
        android:id="@+id/tv_register"

        style="@style/input_btn_style"
        android:layout_marginTop="60dp"
        android:text="@string/sure"/>




</LinearLayout>
