<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <com.example.xy.dentist.widget.city.WheelView
        android:id="@+id/year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:itemNumber="3"
        app:lineColor="#ccc"
        app:lineHeight="1dp"
        app:maskHight="32dp"
        app:noEmpty="true"
        app:normalTextColor="#ccc"
        app:normalTextSize="14sp"
        app:selectedTextColor="#000"
        app:selectedTextSize="22sp"
        app:unitHight="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Year"
        android:visibility="gone"
        android:textSize="13sp"
        />

    <com.example.xy.dentist.widget.city.WheelView
        android:id="@+id/month"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:itemNumber="3"
        app:lineColor="#ccc"
        app:lineHeight="1dp"
        app:maskHight="32dp"
        app:noEmpty="true"
        app:normalTextColor="#ccc"
        app:normalTextSize="14sp"
        app:selectedTextColor="#000"
        app:selectedTextSize="22sp"
        app:unitHight="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Month"
        android:visibility="gone"
        android:textSize="13sp"
        />

    <com.example.xy.dentist.widget.city.WheelView
        android:id="@+id/day"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:itemNumber="3"
        app:lineColor="#ccc"
        app:lineHeight="1dp"
        app:maskHight="32dp"
        app:noEmpty="true"
        app:normalTextColor="#ccc"
        app:normalTextSize="14sp"
        app:selectedTextColor="#000"
        app:selectedTextSize="22sp"
        app:unitHight="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Day"
        android:visibility="gone"
        android:textSize="13sp"
        />
</LinearLayout>