<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.xy.dentist.ui.login.LoginActivity">

    <com.jaydenxiao.common.commonwidget.NormalTitleBar
        android:id="@+id/ntb"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_phone"
       style="@style/input_nomal_style"
        android:hint="@string/input_phone"
        android:inputType="phone"
        android:maxLength="11"
       />

    <EditText
        android:id="@+id/et_passw"
        style="@style/input_nomal_style"
        android:hint="@string/input_pass"
        android:inputType="textPassword"
        />
    <TextView
        android:id="@+id/tv_tips"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:text="绑定后，您的QQ账号和牙医联盟账号都可以登录"
        android:gravity="center"
        android:textColor="@color/gray_color"
        android:textSize="@dimen/font_small"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="140dp"
        style="@style/input_btn_style"
        android:text="@string/login"
       android:id="@+id/tv_login"/>

    <LinearLayout
        android:id="@+id/LL_state"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:textColor="#5F2AC9"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginRight="10dp"
            android:textSize="@dimen/font_small"
            android:text="@string/Registerimmediately"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_width="wrap_content"
            android:src="@mipmap/line"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_forgetpass"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="wrap_content"
            android:textColor="#5F2AC9"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/font_small"
            android:text="@string/forgetpass"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_forpass"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textColor="#5F2AC9"
        android:layout_marginLeft="10dp"
        android:textSize="@dimen/font_small"
        android:text="@string/forgetpass"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/ll_tap"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#E2E2E2"
            android:layout_height="1dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="第三方登录"
            android:layout_margin="10dp"
            android:textSize="@dimen/font_small"
            android:textColor="@color/gray_color"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="#E2E2E2"
            android:layout_height="1dp"></View>


        

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_third"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:textColor="#26B8F2"
            android:textSize="@dimen/font_small"
            android:text="QQ登录"
            android:id="@+id/tv_qq"
            android:layout_marginLeft="30dp"
            android:drawableTop="@mipmap/qq"
            android:layout_gravity="center"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_wechat"
            android:layout_width="0dp"
            android:textColor="#48DC46"
            android:textSize="@dimen/font_small"
            android:text="微信登录"
            android:layout_marginRight="30dp"
            android:drawableTop="@mipmap/wechat"
            android:layout_gravity="center"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </LinearLayout>







</LinearLayout>
