<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color"
    tools:context="com.example.xy.dentist.ui.login.LoginActivity">

    <com.jaydenxiao.common.commonwidget.NormalTitleBar
        android:id="@+id/ntb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:id="@+id/ll_head"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:layout_weight="1"
            android:text="@string/head"
            android:textColor="#5C5C5C"
            android:textSize="@dimen/font_normal"
            />

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="40dp"
            android:src="@mipmap/bna"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:layout_height="40dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@mipmap/iconfontfanhui"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_name"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:layout_weight="1"
            android:text="@string/name"
            android:textColor="#5C5C5C"
            android:textSize="@dimen/font_normal"
            />

        <TextView
            android:id="@+id/tv_name"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:textColor="#5C5C5C"
            android:textSize="@dimen/font_normal"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@mipmap/iconfontfanhui"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_year"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:layout_weight="1"
            android:text="@string/year"
            android:textColor="#5C5C5C"
            android:textSize="@dimen/font_normal"
            />

        <TextView
            android:id="@+id/tv_year"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:textColor="#5C5C5C"
            android:textSize="@dimen/font_normal"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@mipmap/iconfontfanhui"/>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>




</LinearLayout>
