<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context="com.example.xy.dentist.ui.login.LoginActivity">

    <com.jaydenxiao.common.commonwidget.NormalTitleBar
        android:id="@+id/ntb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/ll_feed"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:layout_weight="1"
            android:text="@string/feedback"
            android:textColor="#5C5C5C"
            android:textSize="@dimen/font_normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@mipmap/iconfontfanhui" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_update_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:layout_weight="1"
            android:text="@string/update_pass"
            android:textColor="#5C5C5C"
            android:textSize="@dimen/font_normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@mipmap/iconfontfanhui" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_about_us"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:layout_weight="1"
            android:text="关于我们"
            android:textColor="#5C5C5C"
            android:textSize="@dimen/font_normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@mipmap/iconfontfanhui" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_message"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_messageDot"
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/shape_red_dot"
                android:layout_centerVertical="true"
                android:visibility="invisible"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="消息"
                android:textColor="#5C5C5C"
                android:textSize="@dimen/font_normal"
                android:layout_marginLeft="10dp"
                />

        </RelativeLayout>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@mipmap/iconfontfanhui" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_share"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:layout_weight="1"
            android:text="邀请好友"
            android:textColor="#5C5C5C"
            android:textSize="@dimen/font_normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@mipmap/iconfontfanhui" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tv_exsice"

        style="@style/input_btn_style"
        android:layout_gravity="bottom"
        android:layout_margin="0dp"
        android:background="@color/white"
        android:text="@string/exicelogin"
        android:textColor="@color/colorPrimary" />


</LinearLayout>
